# jostmusicplayer-tauri

./: CLAUDE.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml  test.yml
src/: App.vue
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: db.rs  lib.rs  main.rs  opus_source.rs  player.rs  scanner.rs  symphonia_source.rs
src-tauri/tests/fixtures/: long.opus  mono.opus  tagged.m4a  tagged.opus  tone.opus
src/components/: SettingsDialog.vue  TrackList.vue
