[package]
name = "jostmusicplayer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jostmusicplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
lofty = "0.22"
# symphonia-aac decodes AAC; symphonia-isomp4 demuxes the MP4/M4A container.
# Both are needed to play .m4a; .aac (raw ADTS) needs only symphonia-aac.
rodio = { version = "0.20", features = ["symphonia-aac", "symphonia-isomp4"] }
audiopus = "0.3.0-rc.0"
ogg = "0.9.2"

[dev-dependencies]
tempfile = "3"

