[package]
name = "jostmusicplayer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jostmusicplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
lofty = "0.22"
# rodio's default features cover mp3 (and wav/flac/vorbis) via symphonia.
rodio = "0.20"
audiopus = "0.3.0-rc.0"
ogg = "0.9.2"
# AAC/MP4 go through our own SymphoniaSource (see src/symphonia_source.rs), not
# rodio's Decoder, which panics on .m4a. aac = AAC codec + ADTS demux for raw
# .aac; isomp4 = MP4 container demux for .m4a.
symphonia = { version = "0.5", features = ["aac", "isomp4"] }

[dev-dependencies]
tempfile = "3"

